tests/NormalTests/paczka1/fuzzy1/39539614.err
Error in line 1: dpX8TmR3JC A850 63,2
Error in line 5: OUBk9HZ4k5n A721 90,9
Error in line 4: dpX8TmR3JC S459 53,5
Error in line 12: dpX8TmR3JC S656 55,1
Error in line 17: 1rxb5rsgy A721 7,0
Error in line 19: 1rxb5rsgy S656 84,4
